# modeseven

./: .gitignore  .gitmodules  .llm-dir-ignore  Cargo.toml  README.md  build.rs  install_hooks.sh
.hooks/: .llm-dir-ignore  test_pre_commit.sh  test_pre_commit_complex.sh
.hooks/pre-commit/: Cargo.toml
.hooks/pre-commit/src/: main.rs
src/: app.rs  consts.rs  main.rs  state.rs
src/assets/: manager.rs  mod.rs  texture.rs
src/camera/: camera.rs  mod.rs
src/game/: mod.rs
src/game/camera/: camera.rs  mod.rs
src/game/input/: inputs.rs
src/game/rendering/: mod.rs  renderable.rs  renderer.rs
src/game/utils/: fps.rs  mod.rs
src/game/world/: car.rs  world.rs
src/input/: controls.rs  inputs.rs  mod.rs
src/menu/: element.rs  menu_renderer.rs  mod.rs
src/physics/: car.rs  mod.rs  vec2.rs
src/rendering/: mod.rs  renderable.rs  renderer.rs  sprite.rs  sprite_manager.rs  texture.rs
src/utils/: fps.rs  mod.rs  vec2.rs
src/world/: car.rs  mod.rs  object.rs  world.rs
src/world/objects/: behavior.rs  checkpoint.rs  mod.rs  object.rs  power_up.rs
