[package]
name = "modeseven"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
error-iter = "0.4"
log = "0.4"
anyhow = "1"
pix-win-loop = "0.4.0" # Wrapper around winit and pixels and a simple game loop implementation
rand = "0.9.0-alpha.2"
image = "0.25.5"
include_assets = "1.0.0"
glam = "0.29.2"
